--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -171,6 +171,7 @@ inventory:
         #    - compute.googleapis.com/UrlMap
         #    - compute.googleapis.com/VpnTunnel
         #    - container.googleapis.com/Cluster
+        #    - container.googleapis.com/NodePool
         #    - dataproc.googleapis.com/Cluster
         #    - dataproc.googleapis.com/Job
         #    - dns.googleapis.com/ManagedZone
@@ -183,7 +184,6 @@ inventory:
         #    - spanner.googleapis.com/Instance
         #    - sqladmin.googleapis.com/Instance
         #    - storage.googleapis.com/Bucket
-        #    - container.googleapis.com/Cluster
         #    - k8s.io/Node
         #    - k8s.io/Pod
         #    - k8s.io/Namespace
