--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -12,6 +12,8 @@ inventory:
 
     # Root resource to start crawling from, formatted as
     # <resource_type>/<resource_id>, (e.g. "organizations/12345677890")
+    # Note: For root resource id at a project level, you will need to use
+    # project number instead of project id.
     root_resource_id: {ROOT_RESOURCE_ID}
 
     # Composite root resources: combines multiple resource roots into a single
@@ -27,10 +29,9 @@ inventory:
     # Resources can exist in multiple organizations.
     #
     #composite_root_resources:
-    #    - "folders/12345"
-    #    - "folders/45678"
-    #    - "projects/98765"
-    #    - "organizations/56789"
+    #    - "folders/<folder number>"
+    #    - "projects/<project number>"
+    #    - "organizations/<organization number>"
     composite_root_resources: {COMPOSITE_ROOT_RESOURCES}
 
     # gsuite access
