--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -13,7 +13,7 @@ inventory:
     # Root resource to start crawling from, formatted as
     # <resource_type>/<resource_id>, (e.g. "organizations/12345677890")
     # Note: For root resource id at a project level, you will need to use
-    # project number instead of project id.
+    # project number instead of project id, e.g. "projects/<project number>".
     root_resource_id: {ROOT_RESOURCE_ID}
 
     # Composite root resources: combines multiple resource roots into a single
