--- a/cloudbuild-dev.yaml
+++ b/cloudbuild-dev.yaml
@@ -1,6 +1,5 @@
 # Copyright 2019 The Forseti Security Authors. All rights reserved.
-#
-# Licensed under the Apache License, Versisn 2.0 (the "License");
+# Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
 #
@@ -12,16 +11,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: v1
-kind: Service
-metadata:
-  name: forseti-server-service
-  labels:
-    app: forseti-server-service
-spec:
-  ports:
-    - port: 50051
-      protocol: TCP
-  clusterIP: ${FORSETI_SERVER_IP}
-  selector:
-    app: forseti-server
+# This defines the build steps of Forseti docker images. The google container
+# builder must be invoked against the root of the git directory.
+#
+steps:
+- name: 'gcr.io/cloud-builders/docker'
+  id: Build forseti-security dev container image
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/forseti:$BRANCH_NAME', '.']
+images:
+- gcr.io/$PROJECT_ID/forseti:$BRANCH_NAME
+timeout: 1200s
