Add missing dash in resource_rules.yaml

--- a/rules/resource_rules.yaml
+++ b/rules/resource_rules.yaml
@@ -21,7 +21,7 @@
 # folder id, project id, etc.) when specifying the resource ids.
 
 # rules:
-#   name: Project resource trees.
+# - name: Project resource trees.
 #   mode: required
 #   resource_types:
 #   - 'project'
