--- a/rules/ke_rules.yaml
+++ b/rules/ke_rules.yaml
@@ -87,7 +87,17 @@ rules:
         minor: '5-gke.4'
         operator: '>='
       - major: '1.11'
-        operator: '>='
+        minor: '8-gke.10'
+        operator: '='
+      - major: '1.12'
+        minor: '7-gke.24'
+        operator: '='
+      - major: '1.12'
+        minor: '8-gke.10'
+        operator: '='
+      - major: '1.13'
+        minor: '6-gke.13'
+        operator: '='
 
 # Example rules.
 #  - name: Only allow supported versions of 1.9 on projects under folder 123456
