update ke rules to use >= on the latest minor for version 1.11 and 1.12.

--- a/rules/ke_rules.yaml
+++ b/rules/ke_rules.yaml
@@ -88,13 +88,13 @@ rules:
         operator: '>='
       - major: '1.11'
         minor: '8-gke.10'
-        operator: '='
+        operator: '>='
       - major: '1.12'
         minor: '7-gke.24'
         operator: '='
       - major: '1.12'
         minor: '8-gke.10'
-        operator: '='
+        operator: '>='
       - major: '1.13'
         minor: '6-gke.13'
         operator: '>='
