Updated 'rules_path' to point to GCS

--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -211,7 +211,7 @@ scanner:
     # gs://bucket-name/path/for/rules_path
     # if no rules_path is specified, rules are
     # searched in /path/to/forseti_security/rules/
-    rules_path: /home/ubuntu/forseti-security/rules
+    rules_path: gs://{FORSETI_BUCKET}/rules
 
     # Enable the scanners as default to true when integrated for Forseti 2.0.
 
