--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -17,9 +17,12 @@ inventory:
     root_resource_id: {ROOT_RESOURCE_ID}
 
     # Resources to be excluded during the inventory process.
-    # Only organizations/<ORG_NUMBER>, folders/<FOLDER_NUMBER> and
-    # projects/<PROJECT_ID> are accepted. The child resources under
-    # the excluded resources will also be excluded.
+    # Only organizations/<ORG_NUMBER>, folders/<FOLDER_NUMBER>,
+    # projects/<PROJECT_ID> or projects/<PROJECT_NUMBER> are accepted.
+    # The child resources under the excluded resources will also be excluded.
+    #
+    # Example:
+    # excluded_resources: ['folders/1234', 'projects/my-project-123', 'projects/4321']
     excluded_resources: []
 
     # Composite root resources: combines multiple resource roots into a single
