--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,10 @@ codecov==2.0.15
 pylint==1.9.4
 flake8==3.6.0
 future==0.17.1
+
+# Needed for tracing support.
+opencensus==0.6.0
+google-cloud-trace==0.19.0
+opencensus-ext-grpc==0.3.0
+opencensus-ext-stackdriver==0.4.0
+opencensus-ext-sqlalchemy==0.1.2
