Target latest ubuntu version and increase ruby version.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
+dist: bionic
 sudo: required
 language: ruby
 services:
   - docker
 cache: bundler
 rvm:
-- 2.5.3
+- 2.6.3
 addons:
   apt:
     packages:
