--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@
 # Compiled python
 *.pyc
 
+# Terraform and kitchen directories
+/.terraform/
+/.kitchen/
+
 # Compiled protobuf
 *_pb2.py
 *_pb2_grpc.py
