--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ jobs:
       -in secret-key.tar.enc -out secret-key.tar -d
     - tar xvf secret-key.tar
     install:
-    - docker image pull gcr.io/cloud-foundation-cicd/cft/developer-tools:0.0.1
+    - docker image pull gcr.io/cloud-foundation-cicd/cft/developer-tools:0.2.0
     script:
-    - docker container run -it -e SERVICE_ACCOUNT_JSON="$(< release-silver.json)"
-      --env-file travis-integration.env -v $(pwd):/workspace gcr.io/cloud-foundation-cicd/cft/developer-tools:0.0.1
+    - docker container run -it KITCHEN_TEST_BASE_PATH="integration/tests" -e SERVICE_ACCOUNT_JSON="$(< release-silver.json)"
+      --env-file travis-integration.env -v $(pwd):/workspace gcr.io/cloud-foundation-cicd/cft/developer-tools:0.2.0
       /usr/local/bin/test_integration.sh
   - stage: Unit test
     name: Unit Tests with Python 3.6
@@ -30,6 +30,3 @@ jobs:
     - "./install/scripts/docker_pystyle_forseti.sh"
     after_success:
     - docker -l error exec -it build /bin/bash -c "bash <(curl -s https://codecov.io/bash)"
-before_install:
-- openssl aes-256-cbc -K $encrypted_5c0ae2aa862c_key -iv $encrypted_5c0ae2aa862c_iv
-  -in secret-key.tar.enc -out secret-key.tar -d
