--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ jobs:
     install:
     - docker image pull gcr.io/cloud-foundation-cicd/cft/developer-tools:0.2.0
     script:
-    - docker container run -it -e KITCHEN_TEST_BASE_PATH="integration" -e SERVICE_ACCOUNT_JSON="$(< release-silver.json)"
+    - docker container run -it -e KITCHEN_TEST_BASE_PATH="integration/tests" -e SERVICE_ACCOUNT_JSON="$(< release-silver.json)"
       --env-file travis-integration.env -v $(pwd):/workspace gcr.io/cloud-foundation-cicd/cft/developer-tools:0.2.0
       /usr/local/bin/test_integration.sh
   - stage: Unit test
