--- a/.travis.yml
+++ b/.travis.yml
@@ -43,4 +43,5 @@ jobs:
     - "./install/scripts/docker_unittest_forseti.sh"
     - "./install/scripts/docker_pystyle_forseti.sh"
     after_success:
+    - # Collect codecov results.
     - docker -l error exec -it build /bin/bash -c "bash <(curl -s https://codecov.io/bash)"
