integration tests will only run for cron job

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ jobs:
   include:
   - stage: Integration test
     name: Integration test - docker
+    if: env(TRAVIS_EVENT_TYPE) = cron
     services:
     - docker
     before_install:
