Installing mysql-client in the setup phase and not in the tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ jobs:
     - docker -l error exec -it build /bin/bash -c "bash <(curl -s https://codecov.io/bash)"
   - stage: Integration test
     name: Integration test - docker
-    if: env(TRAVIS_EVENT_TYPE) = cron
+    # if: env(TRAVIS_EVENT_TYPE) = cron
     services:
     - docker
     before_install:
