--- a/configs/server/forseti_conf_server.yaml.sample
+++ b/configs/server/forseti_conf_server.yaml.sample
@@ -163,6 +163,7 @@ inventory:
         #    - compute.googleapis.com/RegionBackendService
         #    - compute.googleapis.com/Route
         #    - compute.googleapis.com/Router
+        #    - compute.googleapis.com/SecurityPolicy
         #    - compute.googleapis.com/Snapshot
         #    - compute.googleapis.com/SslCertificate
         #    - compute.googleapis.com/Subnetwork
