--- a/integration_tests/tests/forseti/inspec.yml
+++ b/integration_tests/tests/forseti/inspec.yml
@@ -54,6 +54,9 @@ attributes:
 - name: forseti-cai-storage-bucket
   required: true
   type: string
+- name: resources_names
+  required: true
+  type: array
 depends:
   - name: inspec-gcp
     git: https://github.com/inspec/inspec-gcp.git
