--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ jobs:
     name: Integration test - docker
     # Check on cron ensures build for integration tests is triggered only when
     # cron job runs on dev branch. This cron job is currently set to run daily.
-    # if: env(TRAVIS_EVENT_TYPE) = cron
+    if: env(TRAVIS_EVENT_TYPE) = cron
     services:
     - docker
     before_install:
