[PoC] Continuous Integration and Release Automation (#3202)
* Added tests

* Added tests

* Added terraform configuration and encrypted keys

* Updated travis.yml

* Updated path

* Optimized tests

* updated travis and script

* renamed integration to integration_tests

* addressed comments

* Added tests to check database for inventory

* Reverted script changes

* updating wait time so that server is ready

* updated wait time to 900 seconds

* modified script

* waiting for 900 seconds

* integration tests will only run for cron job

* Optimmized tests by creating inventory and model only once for all tests

* updated script and renamed fixture

* Optimized tests further and organized in separate files based on modules

* Added new line

* Updated SQL queries

* nits

* Running the unit tests before the integration tests and added another assertion to the test for model delete

* Integration tests will be executed nightly

* Added database check for projects

* Installing mysql-client in the setup phase and not in the tests

* Run integration tests nightly

* Updated SQL query to scan only ACTIVE projects

* Adding back the condition to run integration tests nightly

* Added KMS resources and asserting against them

* Running travis integration tests on this PR

* Renamed KMS resources

* Randomized names

* Fixed string interpolation error and added stdout checks

* No to duplication of terraform configuration files

* Added assertion for model use command

* No to prevent destroying resources

* No to checks on stderr

* Dropped stderr checks from model

* Added comments

* nit

* Removed duplicated command

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,12 @@ htmlcov/
 
 # VSCode Metadata
 .vscode/
+
+# Kitchen and Terraform files
+.terraform/
+.kitchen/
+terraform.tfvars
+
+# SSH key
+sshkey
+
