--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -103,6 +103,10 @@ inventory:
           max_calls: 2
           period: 1.1
           disable_polling: False
+        serviceusage:
+          max_calls: 4
+          period: 1.1
+          disable_polling: False
         sqladmin:
           max_calls: 1
           period: 1.1
@@ -118,6 +122,14 @@ inventory:
         # Timeout in seconds to wait for the exportAssets API to return success.
         # Defaults to 3600 if not set.
         api_timeout: 3600
+
+
+        # Path to the CAI dump files. This is used when you have access to the
+        # dump files directly and would like forseti to parse them into the
+        # gcp_inventory table to use scanner / explainer on top of the data.
+        # E.g. cai_dump_file_gcs_paths: ['gs://my-bucket/123-iam-policy.dump',
+        #                                'gs://my-bucket/123-resource.dump']
+        # cai_dump_file_gcs_paths: []
 
         # Optional list of asset types supported by Cloud Asset inventory API.
         # https://cloud.google.com/resource-manager/docs/cloud-asset-inventory/overview
