Runs integration tests daily

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ jobs:
     name: Integration test - docker
     # Check on cron ensures build for integration tests is triggered only when
     # cron job runs on dev branch. This cron job is currently set to run daily.
-    # if: type = cron
+    if: type = cron
     services:
     - docker
     before_install:
