--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -1,8 +1,5 @@
 # Forseti-Security repo probot-stale configuration
 
-# Only issues or pull requests with all of these labels are check if stale. Defaults to `[]` (disabled)
-onlyLabels: []
-
 # Issues or Pull Requests with these labels will never be considered stale. Set to `[]` to disable
 exemptLabels:
   - security
@@ -17,10 +14,10 @@ exemptMilestones: false
 exemptAssignees: true
 
 # Label to use when marking as stale
-staleLabel: wontfix
+staleLabel: stale
 
 # Limit the number of actions per hour, from 1-30. Default is 30
-limitPerRun: 5
+limitPerRun: 1
 
 # Configuration settings specific to pull requests
 # Details: pull requests older than 30 days will become stale, after 37 days of no activity the issue is closed.
@@ -30,7 +27,7 @@ pulls:
     daysUntilClose: 7
     markComment: >
     This pull request has been automatically marked as stale because it has not had
-    recent activity. It will be closed if no further activity occurs. Thank you
+    recent activity. It will be closed in 7 days if no further activity occurs. Thank you
     for your contributions.
 
 # Configuration settings specific to issues
@@ -41,5 +38,5 @@ issues:
     daysUntilClose: 30
     markComment: >
     This issue has been automatically marked as stale because it has not had
-    recent activity. It will be closed if no further activity occurs. Thank you
+    recent activity. It will be closed in 30 days if no further activity occurs. Thank you
     for your contributions.
