Added scanner test that modifies config file

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -35,6 +35,7 @@ suites:
     verifier:
       systems:
         - name: inventory-module
+          sudo: true
           backend: ssh
           hosts_output: forseti-server-vm-ip
           user: ubuntu
