--- a/.github/auto-comment.yml
+++ b/.github/auto-comment.yml
@@ -1,6 +1,6 @@
 # Add comment related to interrupts action on new issues.
 issueOpened: >
-  Thank your for opening an issue. Our team's interrupts engineer will reivew your issue shortly.
+  Thank you for opening an issue. Our team's interrupts engineer will review your issue shortly.
   
    **Issue Resolution:**
    - [ ] _[Interrupts Engineer]_  Triage / apply categorization labels
@@ -9,4 +9,4 @@ issueOpened: >
    - [ ] _Forseti Engineer]_ Add tasks and next steps to resolve this issue.
 
 #pullRequestOpened: >
-#  Thank your for raising your pull request.
+#  Thank you for raising your pull request.
