--- a/rules/service_account_key_rules.yaml
+++ b/rules/service_account_key_rules.yaml
@@ -31,6 +31,7 @@ rules:
     max_age: 100 # days
 
 # CIS Example
+# This scanner has not been validated by the formal CIS certification process.
 #  - name: 'CIS_GCP_1.6 Ensure Service Account Keys Rotated Every 90 Days'
 #    resource:
 #      - type: organization
