Updated forseti fixture to default to the master branch instead of the last release. Tested that setting TF_VAR_forseti_version env var will override master branch. Included some minor license updates from 2018 -> 2019, and commented out an output that does not exist; will add this output into the TF module and uncomment.

--- a/integration_tests/tests/forseti/inspec.yml
+++ b/integration_tests/tests/forseti/inspec.yml
@@ -51,9 +51,9 @@ attributes:
 - name: forseti-server-service-account
   required: true
   type: string
-- name: forseti-cai-storage-bucket
-  required: true
-  type: string
+#- name: forseti-cai-storage-bucket
+#  required: true
+#  type: string
 - name: kms_resources_names
   required: true
   type: array
