Added db_user_name and db_password attributes.

--- a/integration_tests/tests/forseti/inspec.yml
+++ b/integration_tests/tests/forseti/inspec.yml
@@ -27,6 +27,14 @@ attributes:
 - name: suffix
   required: true
   type: string
+- name: db_user_name
+  required: true
+  type: string
+  value: root
+- name: db_password
+  required: true
+  type: string
+  value: ''
 - name: forseti-client-vm-name
   required: true
   type: string
