--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ jobs:
     services:
     - docker
     before_install:
-    - openssl aes-256-cbc -K $encrypted_5c0ae2aa862c_key -iv $encrypted_5c0ae2aa862c_iv
+    - openssl aes-256-cbc -K $encrypted_4a777c2b03c8_key -iv $encrypted_4a777c2b03c8_iv
       -in secret-key.tar.enc -out secret-key.tar -d
     - tar xvf secret-key.tar
     install:
@@ -49,7 +49,9 @@ jobs:
     # Environment setup, tests execution and clean up is happening in
     # /usr/local/bin/test_integration.sh
     script:
-    - docker container run -it -e KITCHEN_TEST_BASE_PATH="integration_tests/tests" -e SERVICE_ACCOUNT_JSON="$(< release-silver.json)"
-      --env-file travis-integration.env -v $(pwd):/workspace gcr.io/cloud-foundation-cicd/cft/developer-tools:0.4.1
-      /usr/local/bin/test_integration.sh
-
+    - docker container run -it
+      -e KITCHEN_TEST_BASE_PATH="integration_tests/tests"
+      -e SERVICE_ACCOUNT_JSON="$(< credentials.json)"
+      --env-file travis-integration.env
+      -v $(pwd):/workspace
+      gcr.io/cloud-foundation-cicd/cft/developer-tools:0.4.1 /usr/local/bin/test_integration.sh
