Committing some additional files.

--- a/integration_tests/tests/forseti/inspec.yml
+++ b/integration_tests/tests/forseti/inspec.yml
@@ -65,6 +65,9 @@ attributes:
 - name: kms_resources_names
   required: true
   type: array
+- name: test-resource-bucket-scanner-bucket
+  required: true
+  type: string
 depends:
   - name: inspec-gcp
     git: https://github.com/inspec/inspec-gcp.git
