--- a/integration_tests/.kitchen.yml
+++ b/integration_tests/.kitchen.yml
@@ -27,11 +27,11 @@ suites:
   - name: forseti
     driver:
       name: terraform
-      root_module_directory: integration_tests/fixtures/forseti
+      root_module_directory: fixtures/forseti
       command_timeout: 1800
     lifecycle:
       pre_verify:
-        - chmod go-rwx integration_tests/fixtures/bastion/tls_private_key
+        - chmod go-rwx fixtures/bastion/tls_private_key
     verifier:
       systems:
         - name: inventory-module
@@ -39,7 +39,6 @@ suites:
           hosts_output: forseti-server-vm-ip
           user: ubuntu
           key_files:
-            - integration_tests/fixtures/forseti/sshkey
-          proxy_command: ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -o IdentitiesOnly=yes -o LogLevel=ERROR -o ForwardAgent=no -i integration_tests/fixtures/bastion/tls_private_key ubuntu@<%= `terraform output -state integration_tests/fixtures/forseti/terraform.tfstate.d/kitchen-terraform-forseti-local/terraform.tfstate bastion_host 2> /dev/null`.strip %> -p 22 -W %h:%p
+            - fixtures/forseti/sshkey
+          proxy_command: ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -o IdentitiesOnly=yes -o LogLevel=ERROR -o ForwardAgent=no -i fixtures/bastion/tls_private_key ubuntu@<%= `terraform output -state fixtures/forseti/terraform.tfstate.d/kitchen-terraform-forseti-local/terraform.tfstate bastion_host 2> /dev/null`.strip %> -p 22 -W %h:%p
           show_progress: true
-
