Revert "Using forseti-cai-storage-bucket attribute for gs name."
This reverts commit 3a541486b4496cea97ab11b00bcfa066c58266ea.

--- a/integration_tests/tests/forseti/inspec.yml
+++ b/integration_tests/tests/forseti/inspec.yml
@@ -1,4 +1,4 @@
-# Copyright 2019 Google LLC
+# Copyright 2018 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -14,43 +14,49 @@
 
 name: forseti_integration_testing
 attributes:
-- name: bucket_acl_scanner_bucket_name
+- name: project_id
   required: true
   type: string
-- name: enforcer_allow_all_icmp_rule_name
+- name: network_project
+  required: false
+  type: string
+  default: ''
+- name: org_id
   required: true
   type: string
-- name: forseti-cai-storage-bucket
+- name: suffix
   required: true
   type: string
-- name: forseti-client-service-account
+- name: db_user_name
   required: true
   type: string
-- name: forseti-client-storage-bucket
+  value: root
+- name: db_password
   required: true
   type: string
+  value: ''
 - name: forseti-client-vm-name
   required: true
   type: string
 - name: forseti-client-vm-ip
   required: true
   type: string
-- name: forseti-cloudsql-password
+- name: forseti-server-vm-name
   required: true
   type: string
-- name: forseti-cloudsql-user
+- name: forseti-server-vm-ip
   required: true
   type: string
-- name: forseti-server-service-account
+- name: forseti-client-storage-bucket
   required: true
   type: string
 - name: forseti-server-storage-bucket
   required: true
   type: string
-- name: forseti-server-vm-name
+- name: forseti-client-service-account
   required: true
   type: string
-- name: forseti-server-vm-ip
+- name: forseti-server-service-account
   required: true
   type: string
 - name: inventory-cai-eu-bucket-name
