--- a/.travis.yml
+++ b/.travis.yml
@@ -44,9 +44,8 @@ jobs:
     script:
     - docker run --rm -it
       -e TF_VAR_forseti_version=${TRAVIS_PULL_REQUEST_BRANCH:-$TRAVIS_BRANCH}
-      -e KITCHEN_TEST_BASE_PATH="tests"
+      -e KITCHEN_TEST_BASE_PATH="integration_tests/tests"
       -e SERVICE_ACCOUNT_JSON="$(< credentials.json)"
       --env-file travis-integration.env
       -v $(pwd):/workspace
-      -w /workspace/integration_tests
       gcr.io/cloud-foundation-cicd/cft/developer-tools:0.4.1 /usr/local/bin/test_integration.sh
