--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -203,6 +203,7 @@ inventory:
         #    - dns.googleapis.com/Policy
         #    - iam.googleapis.com/Role
         #    - iam.googleapis.com/ServiceAccount
+        #    - iam.googleapis.com/ServiceAccountKey
         #    - k8s.io/Namespace
         #    - k8s.io/Node
         #    - k8s.io/Pod
