Updated to create the firewall rule as part of the terraform configuration, getting an error when running test.

--- a/integration_tests/tests/forseti/inspec.yml
+++ b/integration_tests/tests/forseti/inspec.yml
@@ -68,6 +68,9 @@ attributes:
 - name: test-resource-bucket-scanner-bucket
   required: true
   type: string
+- name: test-resource-forseti-server-allow-icmp
+  required: true
+  type: string
 depends:
   - name: inspec-gcp
     git: https://github.com/inspec/inspec-gcp.git
