Revert "Modified markdown from kramdown to commonmark"
This reverts commit 46beb278ccf7488a9a1276e1703e49ee806d4a09.

--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ plugins:
   - jekyll-include-cache
 google_analytics: UA-98416450-1
 highlighter: rouge
-markdown: CommonMark
+markdown: kramdown
 destination: _www/www/
 
 # Needed for local builds and using {{ site.github }}.
